Fix button alignment

--- a/style.css
+++ b/style.css
@@ -124,5 +124,5 @@ p {
 }
 
 .primary-link {
-  text-align: center;
+  align-items: center;
 }
